name:                pgxhtml
version:             0.1.0.0
synopsis:            XSLT-based PostgreSQL web interface
description:         This is a tool to make custom web interfaces to PostgreSQL
                     databases, using simple and standard technologies.
license:             AGPL-3
license-file:        LICENSE
author:              defanor
maintainer:          defanor@uberspace.net
category:            Database
build-type:          Simple
extra-source-files:  ChangeLog.md
                   , README.md
cabal-version:       >=1.10

executable pgxhtml
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.9 && <5
                     , bytestring >=0.10 && <0.11
                     , unordered-containers >=0.2 && <0.3
                     , text >=1.2 && <1.3
                     , containers >=0.5 && <0.6
                     , postgresql-simple >=0.5 && <0.6
                     , postgresql-libpq >=0.9 && <0.10
                     , http-types >=0.12 && <0.13
                     , hxt >=9.3 && <9.4
                     , hxt-xslt >=9.1 && <9.2
                     , http-api-data >=0.3 && <0.4
                     , wai >=3.2 && <3.3
                     , wai-extra >=3.0 && <3.1
                     , wai-cli >=0.1 && <0.2
                     , warp >=3.2 && <3.3
                     , filepath >=1.4 && <1.5
                     , envy >=1.5 && <1.6
  default-language:    Haskell2010
  ghc-options:         -Wall
