name:                pgxhtml
version:             0.1.0.0
synopsis:            XSLT-based PostgreSQL web interface
description:         This is a tool to make custom web interfaces to PostgreSQL
                     databases, using simple and standard technologies.
license:             AGPL-3
license-file:        LICENSE
author:              defanor
maintainer:          defanor@uberspace.net
category:            Database
build-type:          Simple
extra-source-files:  ChangeLog.md
                   , README.md
cabal-version:       >=1.10

executable pgxhtml
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.9 && <5
                     , base64-bytestring >= 1.0.0.1
                     , bytestring >=0.10 && <0.11
                     , filepath >=1.4 && <1.5
                     , postgresql-libpq >=0.9 && <0.10
  default-language:    Haskell2010
  pkgconfig-depends:   libxml-2.0, libxslt, libexslt
  ghc-options:         -Wall
